@@ -58,13 +58,13 @@
 \indexentry{entryF}{D-DIII}
 \indexentry{entryF}{D-DIV}
 
-\indexentry{entryP}{A-a-1-I-iii}
-\indexentry{entryP}{A-a-2-I-iii}
-\indexentry{entryP}{A-a-3-I-iii}
-\indexentry{entryP}{A-a-1-II-iii}
-\indexentry{entryP}{A-a-1-III-iii}
-\indexentry{entryP}{A-a-1-I-iv}
-\indexentry{entryP}{A-a-1-I-v}
+\indexentry{entryP}{A-a-1-VII-iii}
+\indexentry{entryP}{A-a-2-VII-iii}
+\indexentry{entryP}{A-a-3-VII-iii}
+\indexentry{entryP}{A-a-1-VIII-iii}
+\indexentry{entryP}{A-a-1-IX-iii}
+\indexentry{entryP}{A-a-1-VII-iv}
+\indexentry{entryP}{A-a-1-VII-v}
 
 \indexentry{entryQ}{1-2-3-4-5-6-7-8-9-10}
 \indexentry{entryQ}{1-2-3-4-5-6-7-8-9-11}
