@@ -15,8 +15,8 @@
   \item entryF, C-I[[sfx mp]], D-DI[[sfx mp]], V-LIII[[sfx mp]]
   \item entryF1, C-I[[sfx mp]], \bold{D-DII}, D-DI[[sfx mp]], 
 		V-LIII[[sfx mp]]
-  \item entryP, A-a-1-I-iii[[sfx mp]], A-a-1-II-iii, A-a-1-III-iii, 
-		A-a-2-I-iii, A-a-3-I-iii
+  \item entryP, A-a-1-VII-iii[[sfx mp]], A-a-1-VIII-iii, A-a-1-IX-iii, 
+		A-a-2-VII-iii, A-a-3-VII-iii
   \item entryQ, 1-2-3-4-5-6-7-8-9-10[[sfx 2p]], 
 		1-2-3-4-5-6-7-8-9-14[[sfx mp]], 
 		1-2-3-4-5-6-7-8-9-22[[sfx mp]], 
