@@ -7,7 +7,7 @@
 TEXMFCNF=$srcdir/../kpathsea
 export TEXMFCNF
 
-rm -f foo.* uni.* pprec*.* range*.* locale*.* attr*.* rule*.*
+rm -f foo.* uni.* range*.* pprec*.* locale*.* attr*.* rule*.*
 
 ./upmendex $srcdir/tests/foo.idx -o foo.ind1 -t foo.ilg1 \
 	&& diff $srcdir/tests/foo.ind foo.ind1 || exit 1
@@ -53,6 +53,18 @@ cat $srcdir/tests/uni.idx | \
 ./upmendex -s $srcdir/tests/pprec2.ist $srcdir/tests/pprecA.idx \
 	-o pprecA-2.ind1 -t pprecA-2.ilg \
 	&& diff $srcdir/tests/pprecA-2.ind pprecA-2.ind1 || exit 1
+
+./upmendex -s $srcdir/tests/pprec0.ist $srcdir/tests/pprecB.idx \
+	-o pprecB-0.ind1 -t pprecB-0.ilg \
+	&& diff $srcdir/tests/pprecB-0.ind pprecB-0.ind1 || exit 1
+
+./upmendex -s $srcdir/tests/pprec3.ist $srcdir/tests/pprecB.idx \
+	-o pprecB-3.ind1 -t pprecB-3.ilg \
+	&& diff $srcdir/tests/pprecB-3.ind pprecB-3.ind1 || exit 1
+
+./upmendex -s $srcdir/tests/pprec4.ist $srcdir/tests/pprecB.idx \
+	-o pprecB-4.ind1 -t pprecB-4.ilg \
+	&& diff $srcdir/tests/pprecB-4.ind pprecB-4.ind1 || exit 1
 
 # test for icu_locale
 ./upmendex -s $srcdir/tests/uni.ist -s $srcdir/tests/locale1.ist $srcdir/tests/rule.idx \
